# Algorithmic_Design

./: README.md
AD_bin_heaps/: Makefile  cmake_install.cmake  test_delete_min  test_insert
AD_bin_heaps/src/: binheap.c
Bin_heaps_withoutSwapping/: Makefile  cmake_install.cmake  test_insert
Bin_heaps_withoutSwapping/src/: binheap.c
HW_2/: README.md
HW_2/AD_strassen_template/: CMakeCache.txt  Makefile  cmake_install.cmake  matrix.c  strassen.c  strassen_test
HW_2/Strassen_Generalized/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  matrix.c  nonsq_strassen.c  nonsq_strassen.h  strassen.c  strassen.h  strassen_test  test_nonsq.h
HW_2/Strassen_MemoryEfficient/: CMakeCache.txt  Makefile  cmake_install.cmake  main.c  matrix.c  matrix.h  nonsq_strassen.c  strassen.c  strassen_test  test_nonsq.c
HW_4/: README.md
HW_4/AD_bin_heaps/: CMakeCache.txt
HW_4/AD_bin_heaps/include/: binheap.h
HW_4/Bin_heaps_withoutSwapping/: CMakeCache.txt  test_delete_min
HW_4/Bin_heaps_withoutSwapping/include/: binheap.h
HW_5/: README.md
HW_5/AD_sorting/: CMakeCache.txt  Makefile  cmake_install.cmake  test_sorting
HW_5/AD_sorting/include/: quick_sort.h  total_order.h
HW_5/AD_sorting/src/: bubble_sort.c  heap_sort.c  insertion_sort.c  main.c  quick_sort.c  select.c  (+2 more)
HW_8/: README.md
HW_8/AD_weighted_graph/: CMakeCache.txt  CMakeLists.txt  Makefile  binheap.c  binheap.h  cmake_install.cmake  dijkstra.c  dijkstra.h  main.c  priority_queue.c  priority_queue.h  test_dijkstra  total_orders.c  total_orders.h  weighted_graph.c  weighted_graph.h
